@@ -1207,7 +1207,8 @@
 106) kernel: net: netfilter: ip6t_REJECT: skip checksum verification for outgoing ipv6 packets.<br>
 107) kenrel: net: netfilter: bridge: don't leak skb in error paths.<br>
 108) kernel: net: packet: read num_members once in packet_rcv_fanout().<br>
-109) kernel: backport new ASIX AX88179/178A and Realtek RTL8152/8153 USB 3.0/2.0 Ethernet drivers.<br>
+109) kernel: net: packet: avoid out of bounds read in round robin fanout.<br>
+110) kernel: backport new ASIX AX88179/178A and Realtek RTL8152/8153 USB 3.0/2.0 Ethernet drivers.<br>
 <br>
 <br>
 <b>3.4.x</b><br>
